apps/monitoring/alert-manager/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-dashboard-https-pelargir
  namespace: monitoring
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: alertmanager-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.terra-compute.com`)
      kind: Rule
      services:
        - name: alertmanager-operated
          port: web
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
